--- a/assignment/styles.css
+++ b/assignment/styles.css
@@ -1,3 +1,19 @@
+.flex-container {
+    display: flex;
+    flex-flow: column wrap;
+    /* align-items: flex-start; */
+}
+
+section {
+    padding: 10px;
+    margin: 10px;
+    border: solid lightblue;
+}
+
+.personal-bio-info {
+    flex-grow: 10;
+}
+
 .singapore-flag {
     width: 150px;
     height: 100px;
